multi_index_map/tests/ui_derive2/generated_names.stderr
error[E0405]: cannot find trait `MultiIndexRecordMapIndex` in this scope
  --> tests/ui_derive2/generated_names.rs:14:16
   |
14 | fn selector<I: MultiIndexRecordMapIndex>() {}
   |                ^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope
   |
help: consider importing this trait
   |
 1 + use crate::__multi_index_map2_Record::MultiIndexRecordMapIndex;
   |

error[E0412]: cannot find type `MultiIndexRecordMapUpdate` in this scope
  --> tests/ui_derive2/generated_names.rs:17:19
   |
 7 | #[derive(MultiIndexMap2)]
   |          -------------- similarly named struct `MultiIndexRecordMap` defined here
...
17 |     let _: Option<MultiIndexRecordMapUpdate<'static>> = None;
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: a struct with a similar name exists
   |
17 -     let _: Option<MultiIndexRecordMapUpdate<'static>> = None;
17 +     let _: Option<MultiIndexRecordMap<'static>> = None;
   |
help: consider importing this struct
   |
 1 + use crate::__multi_index_map2_Record::MultiIndexRecordMapUpdate;
   |

error[E0412]: cannot find type `__MultiIndexRecordMapNode` in this scope
  --> tests/ui_derive2/generated_names.rs:18:19
   |
 7 | #[derive(MultiIndexMap2)]
   |          -------------- similarly named struct `MultiIndexRecordMap` defined here
...
18 |     let _: Option<__MultiIndexRecordMapNode> = None;
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: a struct with a similar name exists
   |
18 -     let _: Option<__MultiIndexRecordMapNode> = None;
18 +     let _: Option<MultiIndexRecordMap> = None;
   |
help: consider importing this struct
   |
 1 + use crate::__multi_index_map2_Record::__MultiIndexRecordMapNode;
   |

error[E0412]: cannot find type `__MultiIndexRecordMapIndex0Spec` in this scope
  --> tests/ui_derive2/generated_names.rs:19:19
   |
19 |     let _: Option<__MultiIndexRecordMapIndex0Spec> = None;
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope
   |
help: consider importing this struct
   |
 1 + use crate::__multi_index_map2_Record::__MultiIndexRecordMapIndex0Spec;
   |

error[E0412]: cannot find type `__MultiIndexRecordMapIndex0View` in this scope
  --> tests/ui_derive2/generated_names.rs:20:19
   |
20 |     let _: Option<__MultiIndexRecordMapIndex0View<'static, ()>> = None;
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope
   |
help: consider importing this struct
   |
 1 + use crate::__multi_index_map2_Record::__MultiIndexRecordMapIndex0View;
   |

error[E0412]: cannot find type `__MultiIndexRecordMapIndex0Iter` in this scope
  --> tests/ui_derive2/generated_names.rs:21:19
   |
21 |     let _: Option<__MultiIndexRecordMapIndex0Iter<'static, ()>> = None;
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope
   |
help: consider importing this struct
   |
 1 + use crate::__multi_index_map2_Record::__MultiIndexRecordMapIndex0Iter;
   |
